# HalkoPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpp-libs  mkdocs.yml  parallel_runs.sh  rank_support_v5O2.hpp  run.sh  run_all_tests.sh
docs/: bitVector.md
src/: hello.cpp  hello.hpp  i2b.cpp  i2b.hpp  main.cpp
src/VByte/: vbyte.cpp  vbyte.hpp
src/bitArray/: bitArray.cpp  bitArray.hpp  bitVector.cpp  bitVector.hpp
src/bitvectors/: rank_support_v5O2.hpp  zombit_vector.hpp
src/test/: bit_vector_test.cpp  hello_test.cpp
src/utils/: utils.cpp  utils.hpp
test/: bitVector_test.cpp  hello_test.cpp  sdsl_test.cpp  zombit_vector_test.cpp
